// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconMail should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-mail "
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="fill-color"
    d="M14 3H2c-.6 0-1 .4-1 1v9c0 .6.5 1 1 1h12c.6 0 1-.4 1-1V4c0-.6-.5-1-1-1zM8 8.5L2.8 4h10.5L8 8.5zm6 4.5H2V4.7l5.7 4.8.3.3.3-.3L14 4.7V13z"
    fill="#4e4e4e"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMail should correctly render icon with additional props 1`] = `
<AccessibleSVG
  className="icon-mail class"
  height={100}
  title="title"
  viewBox="0 0 16 16"
  width={200}
>
  <path
    className="fill-color"
    d="M14 3H2c-.6 0-1 .4-1 1v9c0 .6.5 1 1 1h12c.6 0 1-.4 1-1V4c0-.6-.5-1-1-1zM8 8.5L2.8 4h10.5L8 8.5zm6 4.5H2V4.7l5.7 4.8.3.3.3-.3L14 4.7V13z"
    fill="#000"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
